update code connect mongodb

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,7 +7,27 @@ pydantic[email]
 python-jose
 python-multipart==0.0.5
 bcrypt
-
+odmantic
+appdirs
+black
+click
+dnspython
+email-validator
+flake8
+h11
+idna
+mccabe
+motor
+mypy-extensions
+pathspec
+pycodestyle
+pyflakes
+pymongo
+regex
+starlette
+toml
+typed-ast
+typing-extensions
 # tests
 pytest
 httpx 
